fix: button overlaps with upload-list

--- a/webroot/css/fileuploader.css
+++ b/webroot/css/fileuploader.css
@@ -11,7 +11,7 @@
 }
 .qq-upload-drop-area-active {background:#FF7171;}
 
-.qq-upload-list {margin:15px 35px; padding:0; list-style:disc;}
+.qq-upload-list {margin:5px 35px; padding:0; list-style:disc; float: left;}
 .qq-upload-list li { margin:0; padding:0; line-height:15px; font-size:12px;}
 .qq-upload-file, .qq-upload-spinner, .qq-upload-size, .qq-upload-cancel, .qq-upload-failed-text {
     margin-right: 7px;
